# PSYCHE-Bench

./: .gitignore  run.py  run_single.py
claimspec_pkg/: pyproject.toml
claimspec_pkg/src/claimspec/claims/: __init__.py  claim.py
claimspec_pkg/src/claimspec/conventions/: __init__.py  convention.py
claimspec_pkg/src/claimspec/slice/: aggregate.py  data_slice.py  row_filter.py
claimspec_pkg/src/claimspec/specs/: base.py  count_unique.py  stats_descriptive.py
claimspec_pkg/src/claimspec/utils/: fingerprint.py
claimspec_pkg/src/claimspec/values/: base.py  number.py
claimspec_pkg/tests/claims/: test_claim_eq_and_roundtrip.py
claimspec_pkg/tests/conventions/: test_convention.py
claimspec_pkg/tests/slice/: test_dataslice.py
claimspec_pkg/tests/specs/: test_count_unique.py
claimspec_pkg/tests/values/: test_number_compare.py
datasets/_psych101/bahrami2020four/: targets.json
datasets/_psych101/binz2022heuristics/: targets.json
datasets/_psych101/flesch2018comparing/: targets.json
datasets/_psych101/gershman2018deconstructing/: targets.json
datasets/_psych101/gershman2020reward/: targets.json
datasets/_psych101/jagadish2023zero/: targets.json
datasets/behavioral_data/: standard.py
datasets/behavioral_data/badham2017_deficits/: claims.py
datasets/behavioral_data/bahrami2020_four/: claims.py
datasets/behavioral_data/binz2022_heuristics/: claims.py
datasets/behavioral_data/cox2017_information/: claims.py
datasets/behavioral_data/desender2021_math/: claims.py
datasets/others/feher2020humans/: exp1.csv  (+1 more)
evaluation/: main.py
(+1242 files in other folders)
